refactor: optimize Preconditions utility